<resources>
    <string name="app_name">一间</string>
    <!--标题-->
    <string name="title_story_detail">详情</string>
    <string name="title_message_chat">聊天</string>
    <string name="title_follow">关注</string>
    <string name="title_setting">设置</string>
    <string name="title_personal">个人中心</string>

    <!--网络-->
    <string name="response_return_error">数据返回错误</string>
    <string name="net_error">网络错误，请稍后重试！</string>
    <string name="connect_error">连接错误</string>
    <string name="connect_timeout">连接超时</string>
    <string name="bad_network">HTTP错误</string>
    <string name="parse_error">解析错误</string>
    <string name="unknown_error">未知错误</string>
    <string name="pull_foot_loading">正在加载&#8230;</string>
    <string name="login_three_text">第三方登录</string>
    <string name="input_phone">请输入手机号</string>
    <string name="input_password">请输入密码</string>
    <string name="login_text">登录</string>
    <string name="get_vcode_text">获取验证码</string>
    <string name="message_text">消息</string>
    <string name="mine_text">我的</string>
    <string name="inn_text">客栈</string>
    <string name="brewing_text">酝酿</string>


    <string name="noble_text">美酒</string>
    <string name="tasty_text">佳肴</string>

    <string name="waiter_text">小二儿</string>
    <string name="mate_text">伙伴</string>
    <string name="boss_text">掌柜的</string>
    <string name="about_text">关于</string>
    <string name="change_password_text">修改密码</string>
    <string name="send_again">重新发送</string>
    <string name="send_again_timer_text">s后可重发</string>
    <string name="zero_text">0</string>
    <string name="input_vcode">请输入验证码</string>
    <string name="sound_text">声音</string>
    <string name="unfollow">取关</string>
    <string name="follow">关注</string>
    <string name="topic">  生而为人，谁没有一点故事呢？有的会讲出来，有的只会埋在心里。 有些事无法与他人言语，可以对一间讲，在客栈讲。 写在前面，无论怎样，都希望一间不温不火，做一个有个性的平台。备好酒水，讲讲故事，做一个酒肉朋友。不要为了盈利而改变初衷，宁为玉碎，不为瓦全。来到这里的都是闲人，谁没有一点散事。我随便说说，你随便听听，匆匆过客，纸过云烟。</string>


</resources>
