<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".view.mine.setting.AboutActivity">

    <com.hjq.bar.TitleBar
        android:id="@+id/about_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/about_text">

    </com.hjq.bar.TitleBar>


    <ImageView
        android:id="@+id/about_logo"
        android:layout_width="@dimen/dimen_200"
        android:layout_height="@dimen/dimen_200"
        android:layout_below="@+id/about_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dimen_80"
        android:src="@mipmap/logo" />

    <TextView
        android:id="@+id/about_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/about_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dimen_40"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="@dimen/font_24" />

    <TextView
        android:id="@+id/about_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/about_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dimen_10"
        android:text="Version 1.0"
        android:textColor="@color/black"
        android:textSize="@dimen/font_24" />

    <TextView
        android:textColor="@color/black"
        android:text="@string/topic"
        android:padding="@dimen/dimen_24"
        android:layout_below="@+id/about_version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</RelativeLayout>